Cache failed authorization attempts
When the client was started or tried to connect to an instance which
access token expired, the authorization popup was displayed multiple
times - for each action thread, if authorization failed and/or was
canceled.

Furthermore, this commit upgrades the error message displayed on failed
authorization to make more sense to end-user unaware of OAuth tokens.

Signed-off-by: Simon Rozman <simon@rozman.si>

--- a/eduVPN/Resources/Strings.resx
+++ b/eduVPN/Resources/Strings.resx
@@ -150,8 +150,9 @@
   <data name="ErrorAuthorization" xml:space="preserve">
     <value>Client authorization failed.</value>
   </data>
-  <data name="ErrorNullAccessToken" xml:space="preserve">
-    <value>No access token granted.</value>
+  <data name="ErrorInvalidAccessToken" xml:space="preserve">
+    <value>Authorizing the client to use {0} failed.</value>
+    <comment>{0}=Provider</comment>
   </data>
   <data name="OpenVPNStateTypeAddingRoutes" xml:space="preserve">
     <value>Adding routes to system...</value>
