--- a/eduVPN/Resources/Strings.fr.resx
+++ b/eduVPN/Resources/Strings.fr.resx
@@ -150,7 +150,7 @@
   <data name="ErrorAuthorization" xml:space="preserve">
     <value>L'autorisation du client a échoué.</value>
   </data>
-  <data name="ErrorNullAccessToken" xml:space="preserve">
+  <data name="ErrorInvalidAccessToken" xml:space="preserve">
     <value>Aucun jeton d'accès n'a été accordé.</value>
   </data>
   <data name="OpenVPNStateTypeAddingRoutes" xml:space="preserve">
