--- a/eduVPN/Resources/Strings.nl.resx
+++ b/eduVPN/Resources/Strings.nl.resx
@@ -150,7 +150,7 @@
   <data name="ErrorAuthorization" xml:space="preserve">
     <value>Client-autorisatie is mislukt.</value>
   </data>
-  <data name="ErrorNullAccessToken" xml:space="preserve">
+  <data name="ErrorInvalidAccessToken" xml:space="preserve">
     <value>Geen toegangstoken toegekend.</value>
   </data>
   <data name="OpenVPNStateTypeAddingRoutes" xml:space="preserve">
